
## UNRELEASED
### Fixed
- Improved detection of Jumpcut-created clips; previously, we were
relying on an exact match between the item on the pasteboard and the
first clip in Jumpcut's stack, which fails to detect items coming from
Jumpcut *not* at the top of the stack. We now set a marker and ignore
any items that Jumpcut has pasted, regardless of their stack position.
## [0.72] - 2020-02-20
### Fixed
- Fixed issue preventing default hotkey (Control-Option-V) from being set
for first-time users.
- Jumpcut has updated to use the most recent ShortcutRecorder code
as of February 2020; while the fork previously in use worked correctly
on Macs running 10.13 (High Sierra) and later, a crashing bug was
reported when setting the master hotkey on Sierra (duplicated on El
Capitan). Using the mainline ShortcutRecorder (v3.1, from October 2019)
has resolved this issue on El Capitan, where the hotkey may not be set
normally.
- keyCodeToString crashed when using Hiragana and Katakana keyboards;
this code has been made more defensive and should work more robustly for
non-Roman keyboards. (Update: this change also fixed a similar bug with
Pinyin keyboards.) Thanks to Darren Gore for the initial bug report and
assistance with reproduction and testing.
### Added
- "Bezel selection pastes" and "menu selection pastes" are once again
separate items in the general preferences.

## [0.71] - 2019-09-19
### Fixed
- Display resolution changes now trigger adjustments to bezel size and
positioning, meaning that Jumpcut does not need to be restarted to have
a normal bezel after adding or removing a monitor.
- The version of ShortcutRecorder used by Jumpcut was too old to have Mojave
styling or Dark Mode support; some assets have been brought back from the
upstream project to provide this. Snow Leopard styling has been dropped. The
recorder is now legible in Dark Mode.
- Removed some blank Info.plist values causing problems in Activity Monitor;